<resources>
    <string name="app_name">PersonasMaterial</string>
    <string name="action_settings">Settings</string>
    <string name="cedula">Cedula</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="guardar">GUARDAR</string>
    <string name="borrar">BORRAR</string>
    <string name="error1">Digite la cedula</string>
    <string name="error2">Digite el nombre</string>
    <string name="error3">Digite el apellido</string>
    <string name="mensaje2">Persona guardada exitosamente!</string>
    <string name="registrar">REGISTRAR</string>
</resources>
